# usblibr

./: README.md
usb-lib/: Cargo.toml
usb-lib/.github/workflows/: ci.yml
usb-lib/src/: error.rs  hotplug.rs
usb-lib/src/api/: async_transfers.rs  device_handle.rs
usb-lib/src/backend/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
usb-lib/src/core/: pipe_policy.rs
usb-lib/tests/: descriptor_parsing.rs  integration_mock.rs
