[package]
name = "usblibr"
version = "0.1.0"
edition = "2021"

[lib]
name = "usb_lib"

[features]
# Isochronous transfer support via WinUsb_RegisterIsochBuffer et al.
isochronous = []
# Tokio-backed async wrappers (spawn_blocking over the existing OVERLAPPED code).
tokio = ["dep:tokio"]

[dependencies]
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Devices_Usb",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
] }

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.9"
nix = { version = "0.29", features = ["ioctl", "fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = "0.1"
core-foundation = "0.9"
core-foundation-sys = "0.8"

[[example]]
name = "list_devices"
